@@ -298,6 +298,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Do not log user rights change that didn't change anything
 * (bug 12584) Don't reset cl_timestamp when auto-updating sort key on move
 * (bug 12588) Fix selection in namespace selector on Special:Newpages
+* Use only default options when generating RSS and Atom syndication links.
+  This should help prevent infinite link loops that some software may follow,
+  and will generally keep feed behavior cleaner.
 
 
 == Parser changes in 1.12 ==
